[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geocoding = "0.4.0"
tokio = "1.28.2"
reqwest = { version = "0.11.18", features=["json"]}
serde = { version = "1.0.130", features=["derive"]}